src/main/java/com/example/timelist/error/LectureRoomException.java
package com.example.timelist.error;

public class LectureRoomException extends RuntimeException{
}
